fixes, a bunch of unit tests